--- a/im-2310/a2/e3/style.css
+++ b/im-2310/a2/e3/style.css
@@ -96,12 +96,19 @@ li ul{
   /* note the use of position: sticky to keep the button on the page even with scrolling */
   position: sticky;
   background-color: #e5b083;
+  color: #20283d;
   border-radius: 10px ;
   top: 1rem;
   padding: 10px;
+  cursor: pointer;
 }
-/* In this section, I added a background border to mode bottom so that the user can know exactly where it is */
+/* In this section, I added a background border to mode bottom so that the user can know exactly where it is. */
 
+#mode-button:hover{
+  background-color: #42635d;
+  color: #fbf7f3;
+}
+/* Here is a hover element for the mode button, to display that the users have select the right buttom. */
 /* code for loading page */
 
 #load-body{
@@ -123,13 +130,19 @@ li ul{
 /* Based on the original load body, I added a rounded dotted border and filled it with a new color. */
 /* Added the cursor style to let the user know that the element is clickable */ 
 
+#load-link:hover{
+  background-color: #42635d;
+  color: #fbf7f3;
+}
+/* Here is a hover of the load-link, the color related to the load-throbber. */
+
 /* throbber while page is fake loading */
 #load-throbber{
   /* the width, height and background-color give it a shape on the page without any content inside - 
   these value are arbitrary, please change to create your own design  */
   width: 25%;
   height: 2em;
-  background-color: var(--col-04);
+  background-color: var(--col-03);
   border-radius: 10px;
   /* we also initially set display to none so it only shows once the link is clicked */
   display: none;
@@ -138,23 +151,30 @@ li ul{
 #load-throbber::before {
   content: "";
   display: block;
-  width: 25%;
+  width: 0%;
   height: 100%;
   margin: 0;
-  background-color: var(--col-02);
+  background-color: var(--col-04);
   border-radius: 10px;
-  animation: pulse 3s ease-in-out infinite;
+  animation: fill 10s ease-in-out infinite;
 }
+/*  */
 
-@keyframes pulse{
+@keyframes fill{
   0% {
-    transform: scale(0.8);
+    width: 0%;
+  }
+  30%{
+    width: 30%;
   }
   50% {
-    transform: scale(1);
+    width: 50%;
   }
-  100% {
-    transform: scale(0.8);
+  80% {
+    width: 80%;
+  }
+  99% {
+    width: 100%;
   }
 }
 
