--- a/im-2310/a3/style.css
+++ b/im-2310/a3/style.css
@@ -17,9 +17,13 @@
   body{
     padding: 1rem;
     background-color: var(--col-02);
-    color: var(--col-03);
+    color: var(--col-01);
     transition: 1s ease-in-out;
     transition: 1s background-color ease-in-out;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
   }
 
   nav {
@@ -39,7 +43,7 @@
   }
   
   h2{
-    font-size: 3rem;
+    font-size: 5rem;
     text-align: center;
     color: var(--col-01);
   }
@@ -49,14 +53,18 @@
     margin-top: 1rem;
     color: var(--col-01);
   }
-  
-  summary{
+
+  .GroupImg {
+    width: 1200px;
+    height: auto;
+  }
+  .summary{
     font-size: 1rem;
     color: var(--col-01);
   }
 
   .custom-hr {
-    color:var(--col-03);
+    color:var(--col-02);
     border-width: 10px;
     border: dotted;
     text-align: center;
@@ -86,7 +94,7 @@
     width: 100%;
     margin-bottom: 1.5rem;
   }
-  
+
   .img-figure{
     display: flex;
     flex-direction: column;
